# crypto-exchange-client-cex

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/crypto-exchange-client-cex/: apiMessage.hpp  client.hpp  wsMessage.hpp
src/crypto-exchange-client-cex/: CMakeLists.txt
src/crypto-exchange-client-cex-demo/: CMakeLists.txt  _api-secret.hpp  _cex-demo.cpp  api-secret.hpp
src/crypto-exchange-client-cex/src/: client.cpp  wsMessage.cpp
